--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  permission_handler: ^5.1.0+2
-  path_provider: ^1.6.27
-  #flutter_file_manager: ^0.1.1
-  #simple_permissions: ^0.1.9
   via_cep: ^1.0.6
-  #path: ^1.7.0
+  google_maps:
+  permission_handler: ^6.1.3
+  #google_maps_flutter: ^2.0.3
+
   
 dev_dependencies:
   flutter_test:
