--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   via_cep: ^1.0.6
+  provider: 
   google_maps:
   super_easy_permissions:
+  flutter_launcher_icons: ^0.8.1
+  url_launcher: ^6.0.9
 
 
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -50,8 +56,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets: 
+      - lib/data/user.json
+      - assets/fonts/
+      - assets/icon/
+      - assets/index.html
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -65,17 +74,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Oswald
+      fonts:
+         - asset: assets/fonts/Oswald-ExtraLight.ttf
+           weight: 200 
+         - asset: assets/fonts/Oswald-Regular.ttf
+           weight: 400
+         - asset: assets/fonts/Oswald-Light.ttf
+           weight: 300
+         - asset: assets/fonts/Oswald-Medium.ttf
+           weight: 500 
+         - asset: assets/fonts/Oswald-Bold.ttf
+           weight: 700 
+         - asset: assets/fonts/Oswald-SemiBold.ttf
+           weight: 600
+         
+    
+    
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
